--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,7 +106,7 @@
 
     <string name="problemas_camara">Se recomienda capturar la fotografia de forma vertical para una mejor visualización de ubicación.</string>
     <string name="problemas_internet">Revise si posee señal de internet a través de datos o verifique su conexión Wifi para evitar inconvenientes de conexión.</string>
-    <string name="problemas_soporte">¿Dudas?¿Sugerencias?¿Comentarios? sientase libre de contactarnos al correo soporte@im.org, por nuestra red social en Facebook o al sitio web www.im.org</string>
+    <string name="problemas_soporte">¿Dudas?¿Sugerencias?¿Comentarios? sientase libre de contactarnos al correo soporte@apideas.club, por nuestra red social en Facebook o al numero celular </string>
     <string name="problemas_gps">Si tiene problemas para establecer la ubicación del GPS, verifique si es posible obtener su posición ingresando a Google Maps, en caso de ser exitosa la ubicación mediante tal aplicación, intentar nuevamente obtener la ubicación por el botón GPS de la aplicación Oh!Bebemos. </string>
 
     <string name="orientacionFoto">Orientación de cámara</string>
